--- a/project main/css/custom.css
+++ b/project main/css/custom.css
@@ -33,4 +33,4 @@
 	.navbar .nav-item:hover .dropdown-menu{ display: block; }
 	.navbar .nav-item .dropdown-menu{ margin-top:0; }
 }	
-
+.carousel-caption  {background-color: rgba(0, 0, 0, .7);}
