sửa màu dropdown (hover + selected)

--- a/project main/css/bootstrap-4.3.1.css
+++ b/project main/css/bootstrap-4.3.1.css
@@ -3284,13 +3284,13 @@ input[type="button"].btn-block {
 .dropdown-item:hover, .dropdown-item:focus {
   color: #16181b;
   text-decoration: none;
-  background-color: #f8f9fa;
+  background-color:#909090;
 }
 
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #007bff;
+  background-color: #17A2B8;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
