--- a/project main/css/custom.css
+++ b/project main/css/custom.css
@@ -14,6 +14,9 @@
 	padding-bottom: 10px;
 	
 }
+#left {
+	cursor: url("http://www.rw-designer.com/cursor-extern.php?id=144504"), auto;
+}
 #logo {
 	float: left;
 	padding-left: 10%;
