--- a/project main/css/custom.css
+++ b/project main/css/custom.css
@@ -15,7 +15,16 @@
 	
 }
 #left {
-	cursor: url("http://www.rw-designer.com/cursor-extern.php?id=144504"), auto;
+	cursor: url("http://www.rw-designer.com/cursor-extern.php?id=144504"), all-scroll;
+	
+}
+#left a {
+	width: 100%;
+}
+.container {
+	text-align: center;
+
+	
 }
 #logo {
 	float: left;
@@ -30,6 +39,11 @@
 	height: 100px ;
 	
 }
+col img{
+	height: auto;
+	width: 100%;
+	margin: 20px;
+}
 @media all and (min-width: 992px) {
 	.navbar .nav-item .dropdown-menu{ display: none; }
 	.navbar .nav-item:hover .nav-link{   }
@@ -37,3 +51,6 @@
 	.navbar .nav-item .dropdown-menu{ margin-top:0; }
 }	
 .carousel-caption  {background-color: rgba(0, 0, 0, .7);}
+.container a {
+	width: 90%;
+}
