--- a/project main/css/bootstrap-4.3.1.css
+++ b/project main/css/bootstrap-4.3.1.css
@@ -31,7 +31,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --ffont-amily-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -2567,6 +2567,7 @@ fieldset:disabled a.btn {
   color: #fff;
   background-color: #17a2b8;
   border-color: #17a2b8;
+  display: inline-flex;
 }
 
 .btn-info:hover {
@@ -2596,6 +2597,7 @@ fieldset:disabled a.btn {
 .show > .btn-info.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
 }
+
 
 .btn-warning {
   color: #212529;
@@ -10097,4 +10099,52 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
-/*# sourceMappingURL=bootstrap.css.map */
+/* feed-back*/
+.feedback-google{
+	margin: 0px;
+	padding: auto;
+	height: 1120px;
+	line-height: 2.3rem;
+}
+.feedback-google h2{
+	font-weight: 480;
+	line-height: 3rem;
+}
+.feedback-google p{
+	font-size: 20px;
+	font-weight: 100;
+	color: #333;
+	opacity: 1.1;
+}
+.img-vote{
+	width: 150px;
+	height: 80px;
+}
+.feedback-google h4{
+	font-size: 27px;
+	font-weight: 500;
+	
+}
+
+/*about us */
+.about-us{
+	margin: 0px;
+	padding: auto;
+	height: 1800px;
+	line-height: 2.3rem;
+}
+.about-us p{
+	font-size: 22px;
+	font-weight: 450;
+}
+.free-ship{
+	margin-top: 30px;
+}
+.free-ship p{
+	font-size: 20px;
+}
+.text-center p{
+	text-decoration: none;
+    list-style: none;
+	text-align: center;
+}
