--- a/project main/css/bootstrap-4.3.1.css
+++ b/project main/css/bootstrap-4.3.1.css
@@ -31,7 +31,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --ffont-amily-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -10697,4 +10697,191 @@ a {
 .contact-chat:hover{
 	background-color: beige;
 	cursor: pointer;
+}
+
+/*Product laptop Asus */
+.container-product{
+	text-align: left;
+	height: 1800px;
+}
+.title-product{
+	list-style: none;
+	color: #222;
+	background-color: unset;
+	text-decoration: none;
+	margin: 0px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 18px;
+	font-weight: 400px;
+}
+.list-title{
+	list-style: none;
+	display: inline-flex;
+}
+.title-product li{
+    display: list-item;
+	text-align: -webkit-match-parent;
+}
+.title-product ul{
+	list-style-type: disc;
+	list-style: none;
+}
+
+.title-product ul li::after{
+	content: ">";
+	font-weight: 500px;
+    color: #757575;
+    margin: 0 10px 0 5px;
+}
+.title-product ul li:last-child::after{
+	content: "";
+}
+.item-list:hover{
+	list-style: none;
+	color: blueviolet;
+	text-decoration: none;
+}
+.current-product{
+	position: relative;
+	float: left;
+	margin-left: 20px;
+	display: inline-flex;
+	margin-top: 10px;
+}
+.current-product ::after{
+	content: ' ';
+    position: absolute;
+    border-bottom: 2px solid #3c4a65;
+    width: 100%;
+    left: 0;
+    bottom: -2px;
+}
+.current-product span{
+	margin-left: 0.5rem;
+	margin-top: 14px;
+	font-weight: 500;
+	opacity: 0.8;
+	font-size: 15px;
+    word-spacing: 0.15;
+}
+.current-product h2{
+	margin-left: 5px;
+	text-transform: uppercase;
+	font-size: 32px;
+	font-weight: 700;
+	opacity: 0.8;
+	word-spacing: 0.2rem;
+}
+.slide-advertising{
+	position: relative;
+	margin-top: 70px;
+	
+}
+.slideshow {
+	list-style-type: none;
+	width: 80%;
+	height: 400px;
+  }
+  .slideshow,
+.slideshow:after { 
+    width: 100%;
+	height: 400px;
+    z-index: 0; 
+}
+.slideshow li span { 
+	position: absolute;
+   width: 100%;
+   height: 400px;
+  color: transparent;
+   background-size: cover;
+   background-position: 50% 50%;
+   background-repeat: no-repeat;
+   opacity: 0;
+   z-index: 0;
+   animation: imageAnimation 10s linear infinite 0s; 
+}
+
+.slideshow li:nth-child(1) span { 
+	background-image: url("file:///C:/Users/User/Documents/GitHub/git-hub-holoshop/project%20main/images/main%20logo.png");
+}
+.slideshow li:nth-child(2) span { 
+    background-image: url("file:///C:/Users/User/Documents/GitHub/git-hub-holoshop/project%20main/images/banner-asus.jpg");
+    animation-delay: 4s; 
+}
+.slideshow li:nth-child(3) span { 
+    background-image: url("file:///C:/Users/User/Documents/GitHub/git-hub-holoshop/project%20main/images/banner-computer.jpg");
+    animation-delay: 8s; 
+}
+.slideshow li:nth-child(4) span { 
+    background-image: url("file:///C:/Users/User/Documents/GitHub/git-hub-holoshop/project%20main/images/img-holoshop.jpg");   
+    animation-delay: 12s; 
+}
+.slideshow li:nth-child(5) span { 
+    background-image: url("file:///C:/Users/User/Documents/GitHub/git-hub-holoshop/project%20main/images/banner-camera.jpg");
+    animation-delay: 16s; 
+}
+@keyframes imageAnimation { 
+    0% { opacity: 0; animation-timing-function: ease-in; }
+    8% { opacity: 1; animation-timing-function: ease-out; }
+    17% { opacity: 1 }
+    25% { opacity: 0 }
+    100% { opacity: 0 }
+}
+
+
+@keyframes titleAnimation { 
+    0% { opacity: 0 }
+    8% { opacity: 1 }
+    17% { opacity: 1 }
+    19% { opacity: 0 }
+    100% { opacity: 0 }
+}
+
+.no-cssanimations .cb-slideshow li span {
+	opacity: 1;
+}
+.detail-text{
+	text-align: left;
+	opacity: 0.7;
+	font-size: 15px;
+}
+
+/* New */
+.container-news{
+	height: 2000px;
+	display: block;
+	font-size: 18px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	justify-content: center;
+	text-decoration: none;
+}
+.current-news{
+	display: block;
+}
+.current-news h2{
+	margin-left: 30px;
+    font-size: 42px;
+	font-weight: 700;
+	text-decoration: none;
+	list-style: none;
+	letter-spacing: -0.125rem;
+	text-transform: none;
+	margin-top:10px;
+	margin-bottom: 0px;
+}
+.current-news p{
+	font-size: 15px;
+	font-weight: 400;
+	letter-spacing: -0.1rem;
+	opacity: 0.6;
+	text-transform: uppercase;
+	margin-left: 30px;
+}
+.current-news::after{
+	margin-top: -1px;
+	content: '';
+    position: absolute;
+	border-bottom: 2px solid #3c4a65;
+	width: 100%;	
+	opacity: 0.2;
 }
